docs: added delete endpoint docs
